Validations and Flow of Registration and Joining the game

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Quiz in Real Time",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon ./server.js"
   },
   "author": "ADHI NARAYANAN P",
   "license": "ISC",
