--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "real-time-quiz",
   "version": "1.0.0",
   "description": "Quiz in Real Time",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"nodemon ./server.js"
